Use MRU currency and romanized bank names

--- a/freefire.html
+++ b/freefire.html
@@ -34,11 +34,11 @@
 
 <header>
   <nav>
-    <a href="index.html" data-i18n="nav-home">الرئيسية</a>
-    <a href="pubg.html" data-i18n="nav-pubg">PUBG</a>
-    <a href="freefire.html" data-i18n="nav-freefire">Free Fire</a>
-    <a href="googleplay.html" data-i18n="nav-googleplay">Google Play</a>
-    <a href="itunes.html" data-i18n="nav-itunes">iTunes</a>
+    <a href="index.html">Home</a>
+    <a href="pubg.html">PUBG</a>
+    <a href="freefire.html">Free Fire</a>
+    <a href="googleplay.html">Google Play</a>
+    <a href="itunes.html">iTunes</a>
   </nav>
   <div class="lang-switch">
     <button id="lang-toggle">🌐</button>
@@ -56,15 +56,15 @@
   <div class="offer">
     <img src="image/Freefire.jpg" alt="100 Diamonds">
     <h3>100 Diamonds</h3>
-    <p><span data-i18n="price">السعر:</span> 50 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 50 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'Free Fire', '100 Diamonds')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -75,15 +75,15 @@
   <div class="offer">
     <img src="image/Freefire.jpg" alt="310 Diamonds">
     <h3>310 Diamonds</h3>
-    <p><span data-i18n="price">السعر:</span> 145 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 145 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'Free Fire', '310 Diamonds')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -94,15 +94,15 @@
   <div class="offer">
     <img src="image/Freefire.jpg" alt="520 Diamonds">
     <h3>520 Diamonds</h3>
-    <p><span data-i18n="price">السعر:</span> 235 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 235 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'Free Fire', '520 Diamonds')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -113,15 +113,15 @@
   <div class="offer">
     <img src="image/Freefire.jpg" alt="1060 Diamonds">
     <h3>1060 Diamonds</h3>
-    <p><span data-i18n="price">السعر:</span> 460 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 460 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'Free Fire', '1060 Diamonds')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -132,15 +132,15 @@
   <div class="offer">
     <img src="image/Freefire.jpg" alt="2180 Diamonds">
     <h3>2180 Diamonds</h3>
-    <p><span data-i18n="price">السعر:</span> 920 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 920 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'Free Fire', '2180 Diamonds')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
