--- a/googleplay.html
+++ b/googleplay.html
@@ -164,11 +164,11 @@
 <header>
     <h1>LD Top-Up</h1>
     <nav>
-        <a href="index.html" data-i18n="nav-home">الرئيسية</a>
-        <a href="pubg.html" data-i18n="nav-pubg">PUBG</a>
-        <a href="freefire.html" data-i18n="nav-freefire">Free Fire</a>
-        <a href="googleplay.html" data-i18n="nav-googleplay">Google Play</a>
-        <a href="itunes.html" data-i18n="nav-itunes">iTunes</a>
+        <a href="index.html">Home</a>
+        <a href="pubg.html">PUBG</a>
+        <a href="freefire.html">Free Fire</a>
+        <a href="googleplay.html">Google Play</a>
+        <a href="itunes.html">iTunes</a>
     </nav>
     <div class="lang-switch">
         <button id="lang-toggle">🌐</button>
@@ -188,14 +188,14 @@
     <div class="offer-card">
         <img src="image/Googleplay.jpg" alt="Google Play 5$">
         <h3>بطاقة Google Play 5$</h3>
-        <p><span data-i18n="price">السعر:</span> 2 دولار ≈ 80 أوقية</p>
+        <p><span data-i18n="price">السعر:</span> 2 دولار ≈ 80 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'Google Play', 'بطاقة 5$')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -205,14 +205,14 @@
     <div class="offer-card">
         <img src="image/Googleplay.jpg" alt="Google Play 10$">
         <h3>بطاقة Google Play 10$</h3>
-        <p><span data-i18n="price">السعر:</span> 5 دولار ≈ 200 أوقية</p>
+        <p><span data-i18n="price">السعر:</span> 5 دولار ≈ 200 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'Google Play', 'بطاقة 10$')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -222,14 +222,14 @@
     <div class="offer-card">
         <img src="image/Googleplay.jpg" alt="Google Play 15$">
         <h3>بطاقة Google Play 15$</h3>
-        <p><span data-i18n="price">السعر:</span> 7.5 دولار ≈ 300 أوقية</p>
+        <p><span data-i18n="price">السعر:</span> 7.5 دولار ≈ 300 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'Google Play', 'بطاقة 15$')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -239,14 +239,14 @@
     <div class="offer-card">
         <img src="image/Googleplay.jpg" alt="Google Play 25$">
         <h3>بطاقة Google Play 25$</h3>
-        <p><span data-i18n="price">السعر:</span> 12 دولار ≈ 480 أوقية</p>
+        <p><span data-i18n="price">السعر:</span> 12 دولار ≈ 480 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'Google Play', 'بطاقة 25$')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -256,14 +256,14 @@
     <div class="offer-card">
         <img src="image/Googleplay.jpg" alt="Google Play 50$">
         <h3>بطاقة Google Play 50$</h3>
-        <p><span data-i18n="price">السعر:</span> 23 دولار ≈ 920 أوقية</p>
+        <p><span data-i18n="price">السعر:</span> 23 دولار ≈ 920 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'Google Play', 'بطاقة 50$')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
