--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 <header>
     <h1>LD Top-Up</h1>
     <nav>
-        <a href="index.html" data-i18n="nav-home">الرئيسية</a>
-        <a href="pubg.html" data-i18n="nav-pubg">PUBG</a>
-        <a href="freefire.html" data-i18n="nav-freefire">Free Fire</a>
-        <a href="googleplay.html" data-i18n="nav-googleplay">Google Play</a>
-        <a href="itunes.html" data-i18n="nav-itunes">iTunes</a>
+        <a href="index.html">Home</a>
+        <a href="pubg.html">PUBG</a>
+        <a href="freefire.html">Free Fire</a>
+        <a href="googleplay.html">Google Play</a>
+        <a href="itunes.html">iTunes</a>
     </nav>
     <div class="lang-switch">
         <button id="lang-toggle">🌐</button>
@@ -166,19 +166,19 @@
 <section class="categories">
     <div class="category-card" onclick="location.href='pubg.html'">
         <img src="image/UC.jpg" alt="PUBG Mobile">
-        <h3 data-i18n="cat-pubg">PUBG Mobile</h3>
+        <h3>PUBG Mobile</h3>
     </div>
     <div class="category-card" onclick="location.href='freefire.html'">
         <img src="image/Freefire.png" alt="Free Fire">
-        <h3 data-i18n="cat-freefire">Free Fire</h3>
+        <h3>Free Fire</h3>
     </div>
     <div class="category-card" onclick="location.href='googleplay.html'">
         <img src="image/Googleplay.jpg" alt="Google Play">
-        <h3 data-i18n="cat-googleplay">Google Play</h3>
+        <h3>Google Play</h3>
     </div>
     <div class="category-card" onclick="location.href='itunes.html'">
         <img src="image/Itunes.jpg" alt="iTunes">
-        <h3 data-i18n="cat-itunes">iTunes</h3>
+        <h3>iTunes</h3>
     </div>
 </section>
 
