--- a/itunes.html
+++ b/itunes.html
@@ -163,11 +163,11 @@
 <header>
     <h1>LD Top-Up</h1>
     <nav>
-        <a href="index.html" data-i18n="nav-home">الرئيسية</a>
-        <a href="pubg.html" data-i18n="nav-pubg">PUBG</a>
-        <a href="freefire.html" data-i18n="nav-freefire">Free Fire</a>
-        <a href="googleplay.html" data-i18n="nav-googleplay">Google Play</a>
-        <a href="itunes.html" data-i18n="nav-itunes">iTunes</a>
+        <a href="index.html">Home</a>
+        <a href="pubg.html">PUBG</a>
+        <a href="freefire.html">Free Fire</a>
+        <a href="googleplay.html">Google Play</a>
+        <a href="itunes.html">iTunes</a>
     </nav>
     <div class="lang-switch">
         <button id="lang-toggle">🌐</button>
@@ -187,14 +187,14 @@
     <div class="offer-card">
         <img src="image/Itunes.jpg">
         <h3>بطاقة $5</h3>
-        <p>190 أوقية</p>
+        <p>190 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'iTunes', 'بطاقة $5')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -204,14 +204,14 @@
     <div class="offer-card">
         <img src="image/Itunes.jpg">
         <h3>بطاقة $10</h3>
-        <p>380 أوقية</p>
+        <p>380 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'iTunes', 'بطاقة $10')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -221,14 +221,14 @@
     <div class="offer-card">
         <img src="image/Itunes.jpg">
         <h3>بطاقة $15</h3>
-        <p>570 أوقية</p>
+        <p>570 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'iTunes', 'بطاقة $15')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -238,14 +238,14 @@
     <div class="offer-card">
         <img src="image/Itunes.jpg">
         <h3>بطاقة $25</h3>
-        <p>950 أوقية</p>
+        <p>950 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'iTunes', 'بطاقة $25')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -255,14 +255,14 @@
     <div class="offer-card">
         <img src="image/Itunes.jpg">
         <h3>بطاقة $50</h3>
-        <p>1900 أوقية</p>
+        <p>1900 MRU</p>
         <button data-i18n="order" onclick="showForm(this, 'iTunes', 'بطاقة $50')">اطلب الآن</button>
         <form>
             <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
             <select class="pay">
-                <option value="بنكيلي">بنكيلي</option>
-                <option value="السداد">السداد</option>
-                <option value="مصرفي">مصرفي</option>
+                <option value="bankily">bankily</option>
+                <option value="sedad">sedad</option>
+                <option value="masrvi">masrvi</option>
             </select>
             <input type="file" class="receipt">
             <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
