--- a/pubg.html
+++ b/pubg.html
@@ -32,11 +32,11 @@
 
 <header>
   <nav>
-    <a href="index.html" data-i18n="nav-home">الرئيسية</a>
-    <a href="pubg.html" data-i18n="nav-pubg">PUBG</a>
-    <a href="freefire.html" data-i18n="nav-freefire">Free Fire</a>
-    <a href="googleplay.html" data-i18n="nav-googleplay">Google Play</a>
-    <a href="itunes.html" data-i18n="nav-itunes">iTunes</a>
+    <a href="index.html">Home</a>
+    <a href="pubg.html">PUBG</a>
+    <a href="freefire.html">Free Fire</a>
+    <a href="googleplay.html">Google Play</a>
+    <a href="itunes.html">iTunes</a>
   </nav>
   <div class="lang-switch">
     <button id="lang-toggle">🌐</button>
@@ -54,15 +54,15 @@
   <div class="offer">
     <img src="image/UC.jpg" alt="60 UC">
     <h3>60 UC</h3>
-    <p><span data-i18n="price">السعر:</span> 55 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 55 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'PUBG', '60 UC')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="رقم اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -73,15 +73,15 @@
   <div class="offer">
     <img src="image/UC.jpg" alt="325 UC">
     <h3>325 UC</h3>
-    <p><span data-i18n="price">السعر:</span> 270 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 270 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'PUBG', '325 UC')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="رقم اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -92,15 +92,15 @@
   <div class="offer">
     <img src="image/UC.jpg" alt="660 UC">
     <h3>660 UC</h3>
-    <p><span data-i18n="price">السعر:</span> 540 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 540 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'PUBG', '660 UC')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="رقم اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -111,15 +111,15 @@
   <div class="offer">
     <img src="image/UC.jpg" alt="1800 UC">
     <h3>1800 UC</h3>
-    <p><span data-i18n="price">السعر:</span> 1460 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 1460 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'PUBG', '1800 UC')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="رقم اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
@@ -130,15 +130,15 @@
   <div class="offer">
     <img src="image/UC.jpg" alt="3850 UC">
     <h3>3850 UC</h3>
-    <p><span data-i18n="price">السعر:</span> 2920 أوقية</p>
+    <p><span data-i18n="price">السعر:</span> 2920 MRU</p>
     <button data-i18n="order" onclick="showForm(this, 'PUBG', '3850 UC')">اطلب الآن</button>
     <form>
       <input type="text" placeholder="رقم اللاعب" class="uid" data-i18n-placeholder="player-id">
       <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
-        <option value="بنكيلي">بنكيلي</option>
-        <option value="السداد">السداد</option>
-        <option value="مصرفي">مصرفي</option>
+        <option value="bankily">bankily</option>
+        <option value="sedad">sedad</option>
+        <option value="masrvi">masrvi</option>
       </select>
       <input type="file" class="receipt">
       <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
